test/mutation_analysis/s0396_rotate_function/hafis/starchat/mutants/13/result.txt
./test/mutation_analysis/s0396_rotate_function/hafis/starchat/mutants/13/Solution.java:32: error: unreachable statement
        return max;
        ^
1 error
